add shuffle question and answer
